tests/NormalTests/paczka1/small_fuzzy/60516799.err
Error in line 13: XhvbbDPlUm S491 -1,3
Error in line 12: XhvbbDPlUm S491 12,3
Error in line 16: XhvbbDPlUm ยน487 48,0
